--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-typography": "^1.4.1",
+    "react-native-web": "0.17.1",
+    "react-native-svg": "12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
